# local-http-mcp

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  advanced_config_example.py  docker-compose.yml  local_http_bridge_mcp.py  pyproject.toml  test_server.py
